# Face_DetectionApp

./: face_encoder.py  face_matcher.py  main.py  pyproject.toml  webcam.py
backend/: video_feed.py
gui/: app.py
