[project]
name = "find-person"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "insightface>=0.7.3",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.10.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
